--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
                     <div class="left">
                         <a class="navbar-brand" href="#">
-                            <img width="150" src="./assets/img/logo.svg" alt="Bootstrap" width="30" height="24">
+                            <img class="boolean_logo" width="150" src="./assets/img/logo.svg" alt="Boolean logo">
+                            <img class="mobile_boolean_logo" width="50" src="./assets/img/mobile-logo.png"
+                                alt="mobile logo">
                         </a>
                     </div>
 
@@ -59,19 +61,19 @@
 
                     <div class="right">
                         <ul class="navbar-nav d-flex flex-row gap-3 mx-3">
-                            <li class="nav-item">
+                            <li class="nav-item-large">
                                 <a class="nav-link" href="#">
                                     <i class="fa-solid fa-list"></i>
 
                                 </a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item-large">
                                 <a class="nav-link" href="#">
                                     <i class="fa-solid fa-circle-question"></i>
 
                                 </a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item-large">
                                 <a class="nav-link" href="#">
                                     <i class="fa-solid fa-ellipsis-vertical"></i>
                                 </a>
