add center and right banner

--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
             <div class="main_right d-flex flex-column flex-grow-1">
                 <div class="main_top ">
                     <div class="row">
+
+
+                        <!-- .main_top_left -->
+
                         <div class="main_top_left flex-column col-12 col-lg-4 col-xl-6">
                             <div class="up d-flex">
                                 <h2>Boolean</h2> <button class="btn"><a href="#">Piano Blaze</a></button>
@@ -176,11 +180,38 @@
 
                             </div>
                         </div>
-                        <div class="main_top_center col-12 col-lg-4 ">
 
+                        <!-- .main_top_center -->
+                        <div class="main_top_center flex-column col-12 col-lg-4 ">
+                            <div class="up  ">
+                                <p>Studenti online negli ultimi 30 minuti</p>
+                            </div>
+                            <div class="under d-flex align-items-center">
+                                <h2>125</h2>
+                            </div>
                         </div>
-                        <div class="main_top_right col-12 col-lg-4 col-xl-2">
 
+                        <!-- .main_top_right -->
+                        <div class="main_top_right col-12 col-lg-4 col-xl-2">
+                            <div class="up d-flex align-items-start">
+                                <p>Nuovo Studente</p>
+                                <button class="btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+                                    aria-controls="offcanvasRight">
+                                    <a href="#"><i class="fa-solid fa-plus"></i></a>
+                                </button>
+
+                                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
+                                    aria-labelledby="offcanvasRightLabel">
+                                    <div class="offcanvas-header">
+                                        <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="offcanvas-body">
+                                        ...
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
