debug plus button on top left main (not complete)

--- a/index.html
+++ b/index.html
@@ -152,18 +152,21 @@
                             <div class="up d-flex">
                                 <h2>Boolean</h2> <button class="btn"><a href="#">Piano Blaze</a></button>
                             </div>
+
+
                             <div class="down d-flex text-center align-items-center">
                                 <button class="btn"><a href="#">3 app</a></button>
-
+                                <i class="fa-solid fa-angles-right"></i>
                                 <div class="levels_button">
                                     <button class="btn" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#collapseWidthExample" aria-expanded="false"
                                         aria-controls="collapseWidthExample">
-                                        <i class="fa-solid fa-angles-right"></i>
+                                        <a href="#">+</a>
                                     </button>
                                 </div>
                                 <div>
-                                    <div class="my_collapse_horizontal collapse-horizontal" id="collapseWidthExample">
+                                    <div class="my_collapse_horizontal collapse collapse-horizontal"
+                                        id="collapseWidthExample">
                                         <div class="d-flex card-body">
                                             <button class="btn"><a href="#">Boolean mobile app</a></button>
                                             <button class="btn"><a href="#">Boolean web app</a></button>
@@ -172,7 +175,7 @@
                                     </div>
                                 </div>
 
-                                <button class="btn under"><a href="#">+</a></button>
+
 
 
 
@@ -408,6 +411,11 @@
                 }
             });
         }
+
+
+
+
+
     </script>
 </body>
 
